...
            android:layout_marginTop="8dp"
            android:layout_marginBottom="6dp"
            android:layout_marginRight="6dp"
            android:layout_marginLeft="6dp">

            <TextView
                android:id="@+id/step_long_description"
                tools:text="This is some description."
                android:textSize="20sp"
                android:padding="12dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

...
