...
            android:layout_width="match_parent"
            android:padding="12dp"
            android:focusableInTouchMode="true"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/title_text_view"
                android:textStyle="bold"
                android:textSize="28sp"
                tools:text="@string/recipe_title"
                android:textColor="#000000"
                android:gravity="center_horizontal"
                android:layout_marginBottom="6dp"
...
